# agent-team

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  team.py  tools.py
docs/: 2026-07-19-agent-team-design.md  python-data-structures.md  python-qa.md
src/agent_team/: __init__.py  cli.py
src/agent_team.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agent_team/core/: __init__.py  agent.py  team.py  tools.py
src/agent_team/rag/: __init__.py  rag_demo.py
src/agent_team/web/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
src/agent_team/web/routers/: __init__.py  auth.py
src/agent_team/web/static/: style.css
src/agent_team/web/templates/: base.html  dashboard.html  login.html  register.html
