[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-team"
version = "0.1.0"
description = "多智能体协作 Demo — ReAct Agent 团队 + Web 应用"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "greenlet>=3.5.3",
    "jinja2>=3.1.6",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.5",
    "openai>=1.0.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

# CLI 入口（可执行命令）
[project.scripts]
agent-cli = "agent_team.cli:main"
agent-web = "agent_team.web.main:app"

# 包发现配置
[tool.setuptools.packages.find]
where = ["src"]

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]

# Uvicorn 配置
[tool.uvicorn]
host = "127.0.0.1"
port = 8000
reload = true
